fixing embedded redis based tests